--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,11 @@ name = "pypi"
 
 [packages]
 requests = "*"
+selenium = "*"
+django = "==4.0.1"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
